--- a/wp_css.css
+++ b/wp_css.css
@@ -153,6 +153,11 @@
     width: 95px;
 }
 
+#search .logo img
+{
+    width: 95px;
+}
+
 #search .circle i
 {
     font-size: 30px;
@@ -166,31 +171,38 @@
 
 #search .title h1
 {
-    font-size: 32px;
     margin: 0px;
     color: #868686;
+    font-family: Roboto;
+    font-weight: 300;
+    line-height: 32px;
+    letter-spacing: 0px;
+    font-style: normal;
 }
 
 #search .title h1 small
 {
+    color: #747474;
     display: block;
-    color: #282828;
     font-size: 16px;
     font-weight: 300;
+    font-family: Roboto;
+    font-style: normal;
+    font-size: 16px;
+    letter-spacing: 0px;
+    line-height: 2;
 }
 
 #search .category-form
 {
-    margin-top: 1em;
     display: flex;
     align-items: center;
-    justify-content: space-between;
 }
 
 #search .category-form .instruction
 {
-    color: #01759B;
-    font-weight: bold;
+    color: #747474;
+    font-size: 18px;
 }
 
 #search .select-category-group
@@ -198,16 +210,17 @@
     display: flex;
     flex-direction: column;
     max-width: 200px;
+    margin-left: 10px;
     position: relative;
     width: 50%;
-    max-width: 200px;
 }
 
 #search .select-category-group .button
 {
-    border-bottom: 3px solid #1b84a7;
+    border-bottom: 1px solid #1b84a7;
+    color: #1b84a7;
     cursor: pointer;
-    padding: 0.5em;
+    padding: 0;
     width: 100%;
 }
 
@@ -237,6 +250,7 @@
 }
 
 #search .select-category-group .input .category-item {
+    color: #1b84a7;
     padding: 0em 0.5em;
     transition: all 0.5s ease;
 }
